tests/error/invalid_cast.gw
#! [contains] can't cast
class C {}
class D {}
D d;
d $ C;
